[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygts"
version = "0.1.0"
description = "Fetch and visualize geographic distribution data for tree species from the BGCI Global Tree Search database"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Charbel EL KHOURY"}
]
dependencies = [
    "geopandas",
    "matplotlib",
    "pandas",
    "requests",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/charbel-el-khoury/pygts"
Repository = "https://github.com/charbel-el-khoury/pygts"

[project.scripts]
pygts = "pygts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
