[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygts"
version = "0.1.0"
description = "Fetch and visualize geographic distribution data for tree species from the BGCI Global Tree Search database"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Charbel EL KHOURY"}
]
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/charbel-el-khoury/pygts"
Repository = "https://github.com/charbel-el-khoury/pygts"

[project.scripts]
pygts = "pygts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
